# ig_desc

./: Cargo.toml
src/: lib.rs
src/logic/: desc_director.rs  mod.rs
src/misc/: descriptor_tools.rs  mod.rs
src/model/: app.rs  descriptor.rs  mod.rs  space.rs
src/service/: desc_service_fs.rs  mod.rs
src/store/: descriptor_facade.rs  descriptor_store.rs  descriptor_store_fs.rs  mod.rs
