[package]
name = "ig_desc"
version = "0.2.0-unstable"
description = "An implementation of descriptor notes."
license = "MIT"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.12.0"
delve = { version = "0.3.0", features = ["derive"] }
ig_tools = { version = "0.1.0-unstable", path = "../ig_tools" }
